[package]
name = "plog"
version = "0.2.15"
edition = "2021"
repository = "https://github.com/Defmc/plog"
description = "A modular pretty logger written for Rust programs"
license = "MIT"
keywords = ["log", "testing", "text", "utility"]
categories = ["development-tools", "accessibility", "command-line-utilities", "config"]

[dependencies]
chrono = { version = "0.4.22", optional = true }
crossterm = { version = "0.25.0", optional = true }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros", "rt-multi-thread", "time"] }

[features]
date = ["chrono"]
time = ["chrono"]
context = []
impls = []
colored = ["crossterm"]
persistent = []
