[package]
name = "plog"
version = "0.2.16"
edition = "2021"
repository = "https://github.com/Defmc/plog"
description = "A modular pretty logger written for Rust programs"
license = "MIT"
keywords = ["log", "testing", "text", "utility"]
categories = ["development-tools", "accessibility", "command-line-utilities", "config"]

[dependencies]
crossterm = { version = "0.25.0", optional = true }
time = { version = "0.3.16", features = ["local-offset"], optional = true }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros", "rt-multi-thread", "time"] }

[features]
local_date = ["time"]
local_time = ["time"]
context = []
impls = []
colored = ["crossterm"]
persistent = []
